--- a/package.json
+++ b/package.json
@@ -443,7 +443,7 @@
         },
         {
           "command": "dbtPowerUser.sqlQuickPick",
-          "when": "resourceLangId =~ /^sql$|^jinja-sql$/ && config.dbt.altimateInstanceName && config.dbt.altimateAiKey",
+          "when": "resourceLangId =~ /^sql$|^jinja-sql$/",
           "group": "navigation@1"
         },
         {
