--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,17 @@
 {
+  "ts-node": {
+    "transpileOnly": true,
+
+    "files": true,
+    "compilerOptions": {
+      "module": "commonjs",
+      "esModuleInterop": true
+    }
+  },
   "compilerOptions": {
     "module": "commonjs",
     "target": "es6",
-    "outDir": "out",
+    "outDir": "dist",
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
     "forceConsistentCasingInFileNames": true,
