--- a/package.json
+++ b/package.json
@@ -690,7 +690,7 @@
   "scripts": {
     "prepare": "husky install",
     "vscode:prepublish": "npm run panel:lineage && webpack --mode production",
-    "webpack": "rm -Rf dist;npm run panel:lineage && webpack --mode development",
+    "webpack": "npm run panel:lineage && webpack --mode development",
     "webpack-dev": "npm run panel:lineage && webpack --mode development --watch",
     "test-compile": "tsc -p ./",
     "lint": "eslint src --ext ts",
@@ -744,7 +744,6 @@
     "inversify": "^6.0.1",
     "inversify-binding-decorators": "^4.0.0",
     "node-abort-controller": "^3.1.1",
-    "node-loader": "^2.0.0",
     "parse-diff": "^0.11.1",
     "python-bridge": "github:mdesmet/node-python-bridge#feat/detached",
     "reflect-metadata": "^0.1.13",
