--- a/package.json
+++ b/package.json
@@ -809,7 +809,6 @@
     "vscode:prepublish": "npm run panel:lineage && webpack --mode production",
     "webpack": "rm -Rf dist; npm run panel:lineage && webpack --mode development",
     "webpack-dev": "npm run panel:lineage && webpack --mode development --watch",
-    "test-compile": "rm -Rf ./.vscode-test/extensions;rm -Rf dist; rm -Rf ./new_lineage_panel/dist; npm run panel:lineage; tsc -p ./",
     "lint": "eslint src --ext ts",
     "lint:fix": "eslint src --ext ts --fix",
     "deploy-vscode": "vsce publish",
@@ -817,7 +816,8 @@
     "deploy-openvsx": "ovsx publish",
     "panel:lineage": "npm run build --prefix ./new_lineage_panel",
     "install:panels": "npm install --prefix ./new_lineage_panel",
-    "test": "npm run test-compile; node ./dist/test/runTest.js"
+    "pretest": "rm -Rf ./.vscode-test/extensions;rm -Rf dist; rm -Rf ./new_lineage_panel/dist; npm run panel:lineage; tsc -p ./",
+    "test": "node ./dist/test/runTest.js"
   },
   "devDependencies": {
     "@types/glob": "^8.1.0",
