--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,10 +7,10 @@
     "emitDecoratorMetadata": true,
     "forceConsistentCasingInFileNames": true,
     "importHelpers": true,
-    "types": ["reflect-metadata", "node"],
+    "types": ["reflect-metadata", "node", "mocha"],
     "lib": ["es6", "es2020", "dom"],
     "sourceMap": true,
-    // "rootDir": "src",
+    "rootDir": "src",
     "strict": true /* enable all strict type-checking options */
     /* Additional Checks */
     // "noImplicitReturns": true, /* Report error when not all code paths in function return a value. */
