--- a/new_lineage_panel/tsconfig.json
+++ b/new_lineage_panel/tsconfig.json
@@ -18,11 +18,7 @@
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true,
-    // This tsconfig should be governed by root tsconfig
-    "paths": {
-      "@types": ["../types/index.ts"]
-    }
+    "noFallthroughCasesInSwitch": true
   },
   "include": ["src"],
   "references": [{ "path": "./tsconfig.node.json" }]
