--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,15 +10,12 @@
     "types": ["reflect-metadata", "node"],
     "lib": ["es6", "es2020", "dom"],
     "sourceMap": true,
-    "rootDir": ".",
-    "strict": true /* enable all strict type-checking options */,
+    "rootDir": "src",
+    "strict": true /* enable all strict type-checking options */
     /* Additional Checks */
     // "noImplicitReturns": true, /* Report error when not all code paths in function return a value. */
     // "noFallthroughCasesInSwitch": true, /* Report errors for fallthrough cases in switch statement. */
     // "noUnusedParameters": true,  /* Report errors on unused parameters. */
-    "paths": {
-      "@types": ["./types/index.ts"]
-    }
   },
   "exclude": ["node_modules", ".vscode-test", "new_lineage_panel"]
 }
