--- a/webview_panels/package.json
+++ b/webview_panels/package.json
@@ -3,15 +3,21 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "engines": {
+    "node": "18.x",
+    "npm": "^9.x"
+  },
+  "packageManager": "npm@9.6.7",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "rm -Rf ./dist; tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.21.1",
     "vite-plugin-svgr": "^4.2.0"
   },
   "devDependencies": {
