--- a/package.json
+++ b/package.json
@@ -846,6 +846,7 @@
     "@typescript-eslint/parser": "^5.62.0",
     "@vscode/test-electron": "^2.3.7",
     "copy-webpack-plugin": "^11.0.0",
+    "cross-env": "^7.0.3",
     "eslint": "^8.53.0",
     "eslint-config-prettier": "^8.9.0",
     "eslint-plugin-prettier": "^5.0.1",
@@ -885,6 +886,10 @@
     "yaml": "^2.3.4"
   },
   "lint-staged": {
+    "**/webview_panels/**/*.{ts,tsx}": [
+      "cross-env PRE_COMMIT=true npm run lint --fix --prefix webview_panels",
+      "prettier -w"
+    ],
     "*.ts": [
       "eslint src --ext ts --fix",
       "eslint --max-warnings=0"
