--- a/webview_panels/package.json
+++ b/webview_panels/package.json
@@ -11,13 +11,15 @@
   "scripts": {
     "dev": "vite",
     "build": "rm -Rf ./dist; tsc && vite build",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 2",
     "preview": "vite preview"
   },
   "dependencies": {
+    "bootstrap": "^5.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.1",
+    "reactstrap": "^9.2.1",
     "vite-plugin-svgr": "^4.2.0"
   },
   "devDependencies": {
@@ -41,6 +43,8 @@
     "eslint-plugin-testing-library": "^6.2.0",
     "eslint-plugin-typescript-sort-keys": "^3.1.0",
     "eslint-plugin-you-dont-need-lodash-underscore": "^6.13.0",
+    "sass": "^1.69.5",
+    "sass-loader": "^13.3.3",
     "typescript": "^5.2.2",
     "vite": "^5.0.8"
   }
