--- a/webview_panels/tsconfig.json
+++ b/webview_panels/tsconfig.json
@@ -18,6 +18,7 @@
 
     /* Linting */
     "strict": true,
+    "strictNullChecks": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
