feat: btn to toggle between new and old ux

--- a/package.json
+++ b/package.json
@@ -70,6 +70,10 @@
             "type": "boolean",
             "description": "Enable the new lineage panel in dbt."
           },
+          "dbt.enableNewDocsPanel": {
+            "type": "boolean",
+            "description": "Enable the new docs panel in dbt."
+          },
           "dbt.enableNewQueryPanel": {
             "type": "boolean",
             "description": "Enable the new query panel in dbt.",
@@ -212,11 +216,6 @@
           "id": "insights_view",
           "title": "Insights",
           "icon": "./media/images/dbt_icon.svg"
-        },
-        {
-          "id": "docs_generator_view",
-          "title": "Docs Generator",
-          "icon": "./media/images/dbt_icon.svg"
         }
       ]
     },
@@ -260,13 +259,6 @@
       "docs_edit_view": [
         {
           "id": "dbtPowerUser.DocsEdit",
-          "name": "",
-          "type": "webview"
-        }
-      ],
-      "docs_generator_view": [
-        {
-          "id": "dbtPowerUser.DocsGenerator",
           "name": "",
           "type": "webview"
         }
