--- a/webview_panels/package.json
+++ b/webview_panels/package.json
@@ -17,14 +17,17 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.4",
     "@reduxjs/toolkit": "^2.0.1",
     "bootstrap": "^5.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.49.3",
     "react-router-dom": "^6.21.1",
     "react-select": "^5.8.0",
     "reactstrap": "^9.2.1",
-    "vite-plugin-svgr": "^4.2.0"
+    "vite-plugin-svgr": "^4.2.0",
+    "yup": "^1.3.3"
   },
   "devDependencies": {
     "@storybook/addon-essentials": "^7.6.6",
