--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,13 +29,24 @@ jobs:
         run: |
           echo "Ref: ${{ github.ref }}"
           echo "Matrix OS: ${{ matrix.os }}"
+          echo "Is Prerelease: ${{ github.event.release.prerelease }}"
       - name: Publish Visual Studio Marketplace
         if: success() && startsWith( github.ref, 'refs/tags/') && matrix.os == 'ubuntu-latest'
-        run: npm run deploy-vscode
+        run: |
+          if [ "${{ github.event_name }}" == "release" ] && [ "${{ github.event.release.prerelease }}" == "true" ]; then
+            npm run deploy-vscode -- --pre-release
+          else
+            npm run deploy-vscode
+          fi
         env:
           VSCE_PAT: ${{ secrets.VSCE_PAT }}
       - name: Publish OpenVSX Marketplace
         if: success() && startsWith( github.ref, 'refs/tags/') && matrix.os == 'ubuntu-latest'
-        run: npm run deploy-openvsx
+        run: |
+          if [ "${{ github.event_name }}" == "release" ] && [ "${{ github.event.release.prerelease }}" == "true" ]; then
+            npm run deploy-openvsx -- --pre-release
+          else
+            npm run deploy-openvsx
+          fi
         env:
           OVSX_PAT: ${{ secrets.OVSX_PAT }}
