fix: user instructions not saved

--- a/package.json
+++ b/package.json
@@ -182,7 +182,7 @@
         },
         {
           "id": "datapilot_view",
-          "title": "Altimate Data pilot",
+          "title": "Altimate AI Datapilot",
           "icon": "./media/images/altimate.svg",
           "contextualTitle": "Altimate Data pilot"
         }
