--- a/package.json
+++ b/package.json
@@ -182,7 +182,7 @@
         },
         {
           "id": "datapilot_view",
-          "title": "Altimate AI Datapilot",
+          "title": "DataPilot Chat",
           "icon": "./media/images/altimate.svg",
           "contextualTitle": "Altimate Data pilot"
         }
