fix: added alert notif

--- a/package.json
+++ b/package.json
@@ -836,7 +836,7 @@
     "deploy-openvsx": "ovsx publish",
     "panel:webviews": "npm run build --prefix ./webview_panels",
     "panel:lineage": "npm run build --prefix ./new_lineage_panel",
-    "install:panels": "npm install --prefix ./new_lineage_panel"
+    "install:panels": "npm install --prefix ./new_lineage_panel && npm install --prefix ./webview_panels"
   },
   "devDependencies": {
     "@types/glob": "^8.1.0",
