--- a/package.json
+++ b/package.json
@@ -168,6 +168,32 @@
             },
             "default": [],
             "description": "Add additional params to `sqlfmt`"
+          },
+          "dbt.deferConfigPerProject": {
+            "type": "object",
+            "description": "Run subset of models without building their parent models",
+            "patternProperties": {
+              ".*": {
+                "type": "object",
+                "properties": {
+                  "deferToProduction": {
+                    "type": "boolean",
+                    "description": "Run subset of models without building their parent models",
+                    "default": false
+                  },
+                  "manifestPathForDeferral": {
+                    "type": "string",
+                    "description": "Manifest path to defer the parent models",
+                    "default": ""
+                  },
+                  "favorState": {
+                    "type": "boolean",
+                    "description": "If a given model exists in both the current environment and the defined defer state, turn this flag on to use the latter always",
+                    "default": false
+                  }
+                }
+              }
+            }
           }
         }
       }
@@ -201,6 +227,11 @@
         {
           "id": "docs_edit_view",
           "title": "Documentation Editor",
+          "icon": "./media/images/dbt_icon.svg"
+        },
+        {
+          "id": "insights_view",
+          "title": "Insights",
           "icon": "./media/images/dbt_icon.svg"
         }
       ]
@@ -256,12 +287,23 @@
           "name": "",
           "icon": "./media/images/dbt_icon.svg"
         }
+      ],
+      "insights_view": [
+        {
+          "id": "dbtPowerUser.Insights",
+          "name": "",
+          "type": "webview"
+        }
       ]
     },
     "commands": [
       {
         "command": "dbtPowerUser.puQuickPick",
         "title": "dbt Power User Quick Pick"
+      },
+      {
+        "command": "dbtPowerUser.openInsights",
+        "title": "Open dbt Power User insights panel"
       },
       {
         "command": "dbtPowerUser.sqlQuickPick",
