--- a/package.json
+++ b/package.json
@@ -95,7 +95,7 @@
               "type": "string"
             },
             "default": [],
-            "description": "Define workspace-relative paths to include. Only projects within these folders will be built. If empty, no filtering is applied."
+            "description": "Define workspace-relative paths to include. Only projects within these folders will be built. If empty, no filtering is applied. The path should be relative to the workspace. Example: [folder1, folder2]"
           },
           "dbt.runModelCommandAdditionalParams": {
             "type": "array",
@@ -103,7 +103,7 @@
               "type": "string"
             },
             "default": [],
-            "description": "Add additional params to the dbt run model command."
+            "description": "Add additional params to the dbt run model command. Ex: --select model1 --target prod needs to be added as four different entries \n--select \nmodel1 \n--target \nprod "
           },
           "dbt.buildModelCommandAdditionalParams": {
             "type": "array",
