--- a/package.json
+++ b/package.json
@@ -99,7 +99,7 @@
               "type": "string"
             },
             "default": [],
-            "description": "Define workspace-relative paths to include. Only projects within these folders will be built. If empty, no filtering is applied."
+            "description": "Define workspace-relative paths to include. Only projects within these folders will be built. If empty, no filtering is applied. The path should be relative to the workspace. Example: [folder1, folder2]"
           },
           "dbt.runModelCommandAdditionalParams": {
             "type": "array",
@@ -107,7 +107,7 @@
               "type": "string"
             },
             "default": [],
-            "description": "Add additional params to the dbt run model command."
+            "description": "Add additional params to the dbt run model command. Ex: --select model1 --target prod needs to be added as four different entries \n--select \nmodel1 \n--target \nprod "
           },
           "dbt.buildModelCommandAdditionalParams": {
             "type": "array",
@@ -115,7 +115,7 @@
               "type": "string"
             },
             "default": [],
-            "description": "Add additional params to the dbt build model command."
+            "description": "Add additional params to the dbt build model command. Ex: --select model1 --target prod needs to be added as four different entries \n--select \nmodel1 \n--target \nprod "
           },
           "dbt.profilesDirOverride": {
             "type": "string",
