--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,6 +25,8 @@ jobs:
       - run: npm install
       - run: npm install
         working-directory: ./new_lineage_panel
+      - run: npm install
+        working-directory: ./webview_panels
       - name: Debugging info
         run: |
           echo "Ref: ${{ github.ref }}"
