parent 65d5a378836e3c05e3754fd9c16dd6e60663af3f author anandgupta42 <anand@altimate.ai> 1706765937 -0800 committer Vipul Rao <svipulrao98@gmail.com> 1707810351 +0530
bumping version for pre-release 0.31.1

chore: create colors css variables in webviewpanel for core theme (#876)

* chore: create colors theme

* chore: add datapilot, doc editor stories

* fix: gitpod integration

bumping version for release 0.31.2

extension basic changes
- env variables set
- profiles
- target

fixes:
- call the target from the py bridge
- remove util function

remove unused imports

remove needless commented code

make sure we return the abs path

remove testing changes

minor fixes:
- project dir in the target path too
- dont use cwd

set the env vars in the settings json file.

path, stricyly relative to project dir

don't do path join if the target is outside of the project

remove the env setting changes

remove unnecessary initialization

minor fixes

Remove imports

Rename vars

fix: feedback link (#878)

feat: lineage cancellation (#863)

* chore: code refactor

* feat: combine start and end progress

* WIP

* feat: cancelling some request

* chore: remove unused cache code

* chore: code refactor

* fix: cancellation and no lineage

* chore: code refactor

* feat: prevent actions when cll in progress

* WIP

* feat: cancel on reset, show old ui

* feat: remove ctxId from host

* feat: remove ctxId from webview

* feat: change name to CllContext

* chore: code refactor

* chore: code cleanup

* feat: added telemtry events

* WIP

* chore: refactor no lineage msg to info notif

* WIP

* chore: code refactor

* WIP

Revert "extension basic changes" (#879)

This reverts commit ed746eb7ad8bd74df5e34d7c7d485d7a3f3a44a8.

bumping version for release 0.31.3

show the analysis options by default. (#886)

feat: added logging service (#860)

* feat: WIP

* feat: added error handle in docsEditPanel

* chore: removed unused imports

fix: use float instead of int in query results to avoid

--- a/webview_panels/tsconfig.json
+++ b/webview_panels/tsconfig.json
@@ -26,7 +26,9 @@
     "paths": {
       "@uicore": ["src/uiCore/index.ts"],
       "@assets/*": ["src/assets/*"],
-      "@modules/*": ["src/modules/*"]
+      "@modules/*": ["src/modules/*"],
+      "@testUtils": ["src/testUtils/index.ts"],
+      "@vscode": ["src/modules/vscode/index.ts"]
     }
   },
   "include": ["src", "vite.config.ts"],
