--- a/webview_panels/package.json
+++ b/webview_panels/package.json
@@ -22,6 +22,7 @@
     "bootstrap": "^5.3.2",
     "idb": "^8.0.0",
     "react": "^18.2.0",
+    "react-code-blocks": "^0.1.6",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.3",
     "react-router-dom": "^6.21.1",
@@ -31,15 +32,17 @@
     "yup": "^1.3.3"
   },
   "devDependencies": {
+    "@faker-js/faker": "^8.4.0",
     "@storybook/addon-essentials": "^7.6.6",
     "@storybook/addon-interactions": "^7.6.6",
     "@storybook/addon-links": "^7.6.6",
     "@storybook/addon-onboarding": "^1.0.10",
     "@storybook/blocks": "^7.6.6",
     "@storybook/builder-vite": "^7.6.6",
+    "@storybook/jest": "^0.2.3",
     "@storybook/react": "^7.6.6",
     "@storybook/react-vite": "^7.6.6",
-    "@storybook/test": "^7.6.6",
+    "@storybook/testing-library": "^0.2.2",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@types/vscode-webview": "^1.57.4",
@@ -61,9 +64,11 @@
     "eslint-plugin-testing-library": "^6.2.0",
     "eslint-plugin-typescript-sort-keys": "^3.1.0",
     "eslint-plugin-you-dont-need-lodash-underscore": "^6.13.0",
+    "factory.ts": "^1.4.1",
     "sass": "^1.69.6",
     "sass-loader": "^13.3.3",
     "storybook": "^7.6.6",
+    "storybook-react-context": "^0.6.0",
     "typescript": "^5.2.2",
     "vite": "^5.0.8"
   }
