chore: add datapilot, doc editor stories

--- a/webview_panels/package.json
+++ b/webview_panels/package.json
@@ -64,6 +64,7 @@
     "sass": "^1.69.6",
     "sass-loader": "^13.3.3",
     "storybook": "^7.6.6",
+    "storybook-react-context": "^0.6.0",
     "typescript": "^5.2.2",
     "vite": "^5.0.8"
   }
