Revert "extension basic changes"
This reverts commit ed746eb7ad8bd74df5e34d7c7d485d7a3f3a44a8.

--- a/package.json
+++ b/package.json
@@ -117,6 +117,14 @@
             "default": [],
             "description": "Add additional params to the dbt build model command. Ex: --select model1 --target prod needs to be added as four different entries \n--select \nmodel1 \n--target \nprod "
           },
+          "dbt.profilesDirOverride": {
+            "type": "string",
+            "description": "Override the profiles dir for every dbt command. Absolute path or relative to the directory containing profiles.yml"
+          },
+          "dbt.targetPathOverride": {
+            "type": "string",
+            "description": "Override the target-path dir for every dbt command. Absolute path or relative to the directory containing manifest.json."
+          },
           "dbt.queryLimit": {
             "type": "integer",
             "description": "The maximum number of rows the `Preview SQL Query` command returns.",
