--- a/webview_panels/package.json
+++ b/webview_panels/package.json
@@ -31,6 +31,7 @@
     "yup": "^1.3.3"
   },
   "devDependencies": {
+    "@faker-js/faker": "^8.4.0",
     "@storybook/addon-essentials": "^7.6.6",
     "@storybook/addon-interactions": "^7.6.6",
     "@storybook/addon-links": "^7.6.6",
@@ -61,6 +62,7 @@
     "eslint-plugin-testing-library": "^6.2.0",
     "eslint-plugin-typescript-sort-keys": "^3.1.0",
     "eslint-plugin-you-dont-need-lodash-underscore": "^6.13.0",
+    "factory.ts": "^1.4.1",
     "sass": "^1.69.6",
     "sass-loader": "^13.3.3",
     "storybook": "^7.6.6",
