--- a/webview_panels/package.json
+++ b/webview_panels/package.json
@@ -22,6 +22,7 @@
     "bootstrap": "^5.3.2",
     "idb": "^8.0.0",
     "react": "^18.2.0",
+    "react-code-blocks": "^0.1.6",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.3",
     "react-router-dom": "^6.21.1",
