--- a/package.json
+++ b/package.json
@@ -280,6 +280,10 @@
         }
       },
       {
+        "command": "dbtPowerUser.datapilotExplain",
+        "title": "Explain"
+      },
+      {
         "command": "dbtPowerUser.sqlToModel",
         "title": "Convert to dbt Model (Preview feature)",
         "shortTitle": "Convert to dbt Model",
@@ -443,6 +447,11 @@
       }
     ],
     "menus": {
+      "dbtPowerUser.datapilotSubmenu": [
+        {
+          "command": "dbtPowerUser.datapilotExplain"
+        }
+      ],
       "editor/title": [
         {
           "command": "dbtPowerUser.executeSQL",
@@ -510,6 +519,10 @@
           "command": "dbtPowerUser.summarizeQuery",
           "group": "dbt@3",
           "when": "resourceLangId =~ /^sql$|^jinja-sql$/ && config.dbt.altimateInstanceName && config.dbt.altimateAiKey"
+        },
+        {
+          "submenu": "dbtPowerUser.datapilotSubmenu",
+          "group": "dbtPowerUser.datapilot"
         },
         {
           "command": "dbtPowerUser.sqlToModel",
@@ -639,6 +652,10 @@
           "light": "./media/images/build-model_light.svg",
           "dark": "./media/images/build-model_dark.svg"
         }
+      },
+      {
+        "id": "dbtPowerUser.datapilotSubmenu",
+        "label": "Datapilot"
       }
     ],
     "languages": [
