--- a/webview_panels/package.json
+++ b/webview_panels/package.json
@@ -42,6 +42,7 @@
     "@storybook/jest": "^0.2.3",
     "@storybook/react": "^7.6.6",
     "@storybook/react-vite": "^7.6.6",
+    "@storybook/testing-library": "^0.2.2",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@types/vscode-webview": "^1.57.4",
