--- a/webview_panels/package.json
+++ b/webview_panels/package.json
@@ -27,6 +27,7 @@
     "react-hook-form": "^7.49.3",
     "react-router-dom": "^6.21.1",
     "react-select": "^5.8.0",
+    "react-textarea-autosize": "^8.5.3",
     "reactstrap": "^9.2.1",
     "vite-plugin-svgr": "^4.2.0",
     "yup": "^1.3.3"
