--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "bugs": {
     "url": "https://github.com/AltimateAI/vscode-dbt-power-user/issues"
   },
-  "version": "0.31.7",
+  "version": "0.31.8",
   "engines": {
     "vscode": "^1.81.0"
   },
@@ -448,8 +448,8 @@
         "command": "dbtPowerUser.sqlPreview"
       },
       {
-        "key": "shift+Ctrl+Q",
-        "mac": "shift+Cmd+Q",
+        "key": "shift+Ctrl+A",
+        "mac": "shift+Cmd+A",
         "command": "dbtPowerUser.openDatapilotWithQuery"
       },
       {
