feat: added basic sharing button
feat: change endpoint

feat: added button

WIP

WIP

WIP

WIP

feat: added checks

WIP

fix: styling

WIP

feat: added invite user

feat: added feature flag in settings

WIP

feat: added progress bars

fix: styling

WIP

WIP

fix: added greyed out share button

feat: add tooltip

WIP

WIP

WIP

WIP

WIP

fix: text

fix: error message

fix: model path

fix: disable admin role

fix: as per comments

fix: text

fix: make url a linik

feat: added project name

--- a/package.json
+++ b/package.json
@@ -78,6 +78,11 @@
             "type": "boolean",
             "description": "Enable the new query panel in dbt.",
             "default": true
+          },
+          "dbt.enableQuerySharing": {
+            "type": "boolean",
+            "description": "This functionality will upload the query preview results to the SaaS service.",
+            "default": false
           }
         }
       },
