--- a/webview_panels/package.json
+++ b/webview_panels/package.json
@@ -19,14 +19,18 @@
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
     "@reduxjs/toolkit": "^2.0.1",
+    "@vscode/codicons": "^0.0.35",
     "bootstrap": "^5.3.2",
     "idb": "^8.0.0",
     "react": "^18.2.0",
     "react-code-blocks": "^0.1.6",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.3",
+    "react-markdown": "^9.0.1",
     "react-router-dom": "^6.21.1",
     "react-select": "^5.8.0",
+    "react-syntax-highlighter": "^15.5.0",
     "react-textarea-autosize": "^8.5.3",
     "reactstrap": "^9.2.1",
     "vite-plugin-svgr": "^4.2.0",
@@ -45,7 +49,9 @@
     "@storybook/react-vite": "^7.6.6",
     "@storybook/testing-library": "^0.2.2",
     "@types/react": "^18.2.43",
+    "@types/react-copy-to-clipboard": "^5.0.7",
     "@types/react-dom": "^18.2.17",
+    "@types/react-syntax-highlighter": "^15.5.11",
     "@types/vscode-webview": "^1.57.4",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
     "@typescript-eslint/parser": "^6.14.0",
