--- a/webview_panels/tsconfig.json
+++ b/webview_panels/tsconfig.json
@@ -27,8 +27,7 @@
       "@uicore": ["src/uiCore/index.ts"],
       "@assets/*": ["src/assets/*"],
       "@modules/*": ["src/modules/*"],
-      "@testUtils": ["src/testUtils/index.ts"],
-      "@vscode": ["src/modules/vscode/index.ts"]
+      "@testUtils": ["src/testUtils/index.ts"]
     }
   },
   "include": ["src", "vite.config.ts"],
